changement bg et les routes du login et le front

--- a/gestion_auto/templates/accounts/login.html
+++ b/gestion_auto/templates/accounts/login.html
@@ -14,7 +14,7 @@
             <div class="card z-index-0 fadeIn3 fadeInBottom">
               <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
                 <div class="bg-gradient-primary shadow-primary border-radius-lg py-3 pe-1">
-                  <h4 class="text-white font-weight-bolder text-center mt-2 mb-0">connecter admin (user)</h4>
+                  <h4 class="text-white font-weight-bolder text-center mt-2 mb-0">connecters admin (user)</h4>
                   <div class="row mt-3">
                     <div class="col-2 text-center ms-auto">
                       <a class="btn btn-link px-3" href="javascript:;">
@@ -62,10 +62,10 @@
                   <div class="text-center">
                     <button type="submit" class="btn bg-gradient-primary w-100 my-4 mb-2">Sign in</button>
                   </div>
-                  <p class="mt-4 text-sm text-center">
+                  <!-- <p class="mt-4 text-sm text-center">
                     Don't have an account?
                     <a href="{% url 'register' %}" class="text-primary text-gradient font-weight-bold">Sign up</a>
-                  </p>
+                  </p> -->
                 </form>
               </div>
             </div>
