--- a/gestion_auto/templates/gestion_auto/index.html
+++ b/gestion_auto/templates/gestion_auto/index.html
@@ -26,7 +26,7 @@
                     <!-- Ajoutez d'autres informations des véhicules ici -->
                     <!-- Ajoutez d'autres détails ici -->
                     <a href="{% url 'detail_vehicule' vehicule.slug %}" class="btn btn-primary">Voir les détails</a>
-                    <a href="{% url 'conducteurs_tables' %}" class="btn btn-primary">tables</a>
+                    <!-- <a href="{% url 'conducteurs_tables' %}" class="btn btn-primary">tables</a> -->
                 
                 </div>
             </div>
