--- a/gestion_auto/templates/includes/footer-fullscreen.html
+++ b/gestion_auto/templates/includes/footer-fullscreen.html
@@ -4,10 +4,10 @@
       <div class="col-12 col-md-6 my-auto">
         <div class="copyright text-center text-sm text-white text-lg-start">
           &copy; <a href="https://bit.ly/3fKQZaL" class="text-white font-weight-bold" target="_blank">Creative Tim</a>
-          Coded by AppSeed.
+          Coded by Samatech.
         </div>
       </div>
-      <div class="col-12 col-md-6">
+      <!-- <div class="col-12 col-md-6">
         <ul class="nav nav-footer justify-content-center justify-content-lg-end">
           <li class="nav-item">
             <a href="https://appseed.us/product/material-dashboard/django/" class="nav-link text-white" target="_blank">Download</a>
@@ -19,7 +19,7 @@
             <a href="https://appseed.us/support/" class="nav-link text-white" target="_blank">Support</a>
           </li>
         </ul>
-      </div>
+      </div> -->
     </div>
   </div>
 </footer>
