--- a/gestion_auto/templates/base.html
+++ b/gestion_auto/templates/base.html
@@ -17,11 +17,11 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Accueil</a>
+                        <a class="nav-link" href="{% url 'gestion_auto_accueil' %}">Accueil</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="#">Véhicules</a>
-                    </li>
+                    </li> -->
                     <!-- Ajoutez d'autres liens de navigation ici -->
                 </ul>
             </div>
