--- a/gestion_auto/templates/includes/navigation-fullscreen.html
+++ b/gestion_auto/templates/includes/navigation-fullscreen.html
@@ -4,9 +4,11 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg blur border-radius-xl top-0 z-index-3 shadow position-absolute my-3 py-2 start-0 end-0 mx-4">
           <div class="container-fluid ps-2 pe-0">
-            <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 " href="{% url 'admin:index' %}">
-              Material Dashboard 2
+            <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 " href="/">
+              CASA Auto
+
             </a>
+            <!-- {% url 'admin:index' %} -->
             <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon mt-2">
                 <span class="navbar-toggler-bar bar1"></span>
@@ -16,7 +18,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navigation">
               <ul class="navbar-nav mx-auto">
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                   {% if request.user.is_superuser %}
                     <a class="nav-link d-flex align-items-center me-2 active" aria-current="page" href="{% url 'admin:index' %}">
                   {% else %}
@@ -24,7 +26,7 @@
                   {% endif %}
                     <i class="fa fa-chart-pie opacity-6 text-dark me-1"></i>
                     Dashboard
-                  </a>
+                  </a> -->
                 <!-- </li>
                 <li class="nav-item">
                   <a class="nav-link me-2" href="{% url 'profile' %}">
@@ -32,7 +34,7 @@
                     Profile
                   </a>
                 </li> -->
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                   <a class="nav-link me-2" href="{% url 'register' %}">
                     <i class="fas fa-user-circle opacity-6 text-dark me-1"></i>
                     Sign Up
@@ -43,14 +45,14 @@
                     <i class="fas fa-key opacity-6 text-dark me-1"></i>
                     Sign In
                   </a>
-                </li>
+                </li> -->
               </ul>
               <ul class="navbar-nav d-lg-block d-none">
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                   <a target="_blank" 
                      href="https://appseed.us/product/material-dashboard/django/" 
                      class="btn btn-sm mb-0 me-1 bg-gradient-dark">Download</a>
-                </li>
+                </li> -->
               </ul>
             </div>
           </div>
